--- a/YM-Analysis.ipynb
+++ b/YM-Analysis.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
      "output_type": "stream",
      "text": [
       "Young's Modulus (static) = 93196410385459.25 Pa\n",
-      "93196.41038545925 GPa\n"
+      "Error in Young's Modulus (static) = 6635558100640128.0 Pa\n"
      ]
     }
    ],
@@ -238,6 +238,62 @@
     "err_in_area = np.pi * np.sqrt((0.00053/2)**2 * (err_in_diameter/0.00053)**2)\n",
     "err_in_ym_static = ym_static * np.sqrt((err_in_slope/slope_initial)**2 + (err_in_length/length)**2 + (err_in_area/area)**2)\n",
     "print(f\"Error in Young's Modulus (static) = {err_in_ym_static} Pa\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. (d) Finding maximum stress and maximum strain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Dynamic Method\n",
+    "(a) Finding E from the average frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Young's Modulus (dynamic) = 186661513023.30038 Pa\n",
+      "In GPa: 186.6615130233004 GPa\n"
+     ]
+    }
+   ],
+   "source": [
+    "period = 0.09599361652\n",
+    "freq = 1/period\n",
+    "omega = 2 * np.pi * freq\n",
+    "M = 6.7\n",
+    "l = 2.95\n",
+    "A = np.pi * (0.00076/2)**2\n",
+    "\n",
+    "ym_dynamic = (omega**2) * ((M*l)/A)\n",
+    "print(f\"Young's Modulus (dynamic) = {ym_dynamic} Pa\")\n",
+    "print(f\"In GPa: {ym_dynamic/1e9} GPa\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. (b) Maximum stress and strain from maximum acceleration and oscillation size"
    ]
   },
   {
