RILEY IS GODKING OF EVERYTHING

--- a/ID/ID_analysis.ipynb
+++ b/ID/ID_analysis.ipynb
@@ -61,10 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ",d = 3.38 # distance from the transmitter to the receiver\n",
-    "D,C_PS_voltage = 2.5 # DC level of the variable power supply\n",
-    "os,c_freq = 39.65 * 1000 # matching the receiver's resonance frequency\n",
-    "con,v_factor = 0.0067 # Slope of the DC voltage as a function of the position\n",
+    "d = 3.38 # distance from the transmitter to the receiver\n",
+    "DC_PS_voltage = 2.5 # DC level of the variable power supply\n",
+    "osc_freq = 39.65 * 1000 # matching the receiver's resonance frequency\n",
+    "conv_factor = 0.0067 # Slope of the DC voltage as a function of the position\n",
     "slit_spacing = 29.9/1000 # distance between the slits\n",
     "slit_width = 0.926/100 # width between the slits\n",
     "ambient_temp = 25 # ambient temperature measured in the room\n",
