small update with the poisson ratio

--- a/BB/BB-Analysis.ipynb
+++ b/BB/BB-Analysis.ipynb
@@ -349,8 +349,10 @@
     "\n",
     "# Poisson's ratio\n",
     "v = slope_bottom / slope_top\n",
+    "v_exp = 0.325\n",
     "\n",
-    "print(\"Poisson's ratio:\", v)"
+    "print(\"Poisson's ratio:\", v)\n",
+    "print(\"Percent error for Poisson's ratio:\", abs((v - v_exp) / v_exp) * 100)\n"
    ]
   }
  ],
