--- a/BB/BB-Analysis.ipynb
+++ b/BB/BB-Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Poisson's ratio: 0.3075363298411625\n"
+      "Poisson's ratio: 0.3075363298411625\n",
+      "Percent error for Poisson's ratio: 5.373436971949996\n"
      ]
     }
    ],
